--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "husky": "^8.0.3",
     "jest": "^27.5.1",
     "lint-staged": "^13.2.3",
+    "redux-mock-store": "^1.5.4",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
@@ -84,5 +85,10 @@
   ],
   "plugins": [
     "@babel/plugin-syntax-jsx"
-  ]
+  ],
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!axios)"
+    ]
+  }
 }
